assets/css/style.css
/*
Red Sox: #BD3039;
Diamondbacks: #A71930;
Braves: #13274F;
Orioles: #DF4601;
Cubs: #0E3386;
White Sox: #27251F;
Reds: #C6011F;
Indians: #0C2340;
Rockies: #33006F;
Tigers: #0C2340;
Astros: #002D62;
Royals: #004687;
Angels: #BA0021;
Dodgers: #005A9C;
Marlins: #000000;
Brewers: #12284B;
Twins: #002B5C;
Mets: #002D72;
Yankeez: #0C2340;
Athletics: #003831;
Phillies: #E81828;
Pirates: #FFC72C;
Cardinals: #C41E3A;
Padres: #2F241D;
Giants: #FD5A1E;
Mariners: #0C2C56;
Rays: #092C5C;
Rangers: #003278;
Blue Jays: #134A8E;
Nationals: #AB0003;
*/
* {
  box-sizing: border-box;
}

body {
  font-family: 'Roboto', sans-serif;
  font-weight: 300;
  background-color: #e5e5e5;
}

.container {
  max-width: 1200px;
  width: 90%;
}

.nav-wrapper {
  padding: 0 10px;
}

.row .col {
  padding: 0.5rem;
}

.btn {
  margin: 0 .2rem;
}

#team-select-bar {
  background-color: #888;
  border-radius: 3px;
  display: flex;
  flex-wrap: wrap;
  margin-top: 0.5rem;
  margin-bottom: 0.5rem;
  padding: 0;
}

#team-history-buttons {
  background-color: #fff;
  justify-content: center;
}

#team-select-main, #team-select-menu {
  padding: 0;
  margin: 0;
}

#team-select-control {
  color: #464D57;
}

#team-select-ul {
  display: none;
  color: #26a69a;
  position: absolute;
  width: 96%;
  z-index: 999;
}

#team-select-control, #team-select-ul {
  background-color: #fff;
  border-width: 0;
  border-radius: 3px;
  font-size: 110%;
  font-weight: 500;
  margin: 0.5rem;
}

#team-select-control.down {
  border-radius: 3px 3px 0 0;
  border-bottom-width: 0.5px;
}

#team-select-ul.down {
  display: block;
  position: absolute;
  width: 96%;
  z-index: 999;
}

#team-select-ul .collection-item {
  padding: 10px;
  display: list-item;
}

#team-select-ul .collection-item:hover {
  background-color: #eee;
}

#team-select-control .disabled, #team-select-ul.down .disabled {
  color: lightgray;
}

.select-wrapper input.select-dropdown.dropdown-secondary {
  border: none;
  margin-bottom: 0;
}

.select-wrapper ul li {
  white-space: nowrap;
}

#upcoming-games {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
}

.no-results {
  display: block;
  text-align: center;
  width: 100%;
}

.game-overview-card {
  border-radius: 8px;
  min-width: 320px;
  max-width: 350px;
  margin: 1rem auto;
}

.game-overview-card.card > .card-content {
  padding: 0;
}

.game-header {
  margin-bottom: 0;
  padding: 1rem;
}

.game-time {
  background-color: #464D57;
  color: white;
  font-size: 120%;
  padding: .2rem;
}

.game-weather {
  height: 230px;
  margin-bottom: 0;
  padding: 0;
}

.game-header, .game-header > .col {
  justify-content: space-around;
}

.home-team-name, .away-team-name {
  font-weight: 500;
  text-align: center;
}

.record {
  font-size: 80%;
}

.weather-description {
  height: 5.5rem;
  padding: 10px 20px;
}

#startScreen {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 10%;
}

@media screen and (min-width: 510px) {
  .game-overview-card {
    margin: 1rem 1rem;
  }

  #team-select-bar {
    flex-wrap: nowrap;
  }

  #team-history-buttons {
    background-color: transparent;
    padding: 0 0.5rem;
    justify-content: flex-end;
  }

  #team-history-buttons .btn {
    border: 1px solid #fff;
  }
  /* .brand-logo {
    padding-left: 18%;
  } */
}

